# qpdoc

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  env_sample  main.py  main_testOpenAI.py  pyproject.toml  requirements.txt  start_the_app.sh
api/conf/: config.py
api/database/: db.py
app/conf/: config.py
app/database/: db.py  models.py
app/repository/: histories.py  user_files.py  users.py
app/routes/: auth.py  history.py  llm_endpoint.py  profile.py  upload_pdf.py  user_files.py  users.py
app/schemas/: essential.py
app/services/: auth.py  llm.py  send_email.py  upload_pdf.py
app/templates/: confirmation_email.html
const-index-react/: index.faiss  index.pkl
front/: chat.html  index.html  pages.py
front/profile_page/: profile.html
front/routes/: forms.py  pages.py
front/templates/: auth.html  base.html  chat.html  index.html  profile.html
layouts/: index.html
migrations/: env.py
migrations/versions/: 0019f191a8c9_black_listing.py  0aea52ef804a_add_new_tables_or_modify_existing_ones.py  0c0994593f63_init.py  0d66ec5623c3_add_new_tables_or_modify_existing_ones.py  128d3003d310_add_new_tables_or_modify_existing_ones.py  1de6d4da2d47_add_new_tables_or_modify_existing_ones.py  309f8a88b7b8_create_pdfs_table.py  32334f9fb04e_delete_files_if_account_deleted.py  472d9caee799_add_new_tables_or_modify_existing_ones.py  4f3aaa5d5551_re_init.py  5a2a642d43bd_add_new_tables_or_modify_existing_ones.py  5a98446d2d51_create_pdfs_table.py  76647c1e0400_add_tabl_hisorry.py  (+15 more)
profile_page/: profile.css  profile.html
(+4 files in other folders)
